Fix for Bug #15722  Engine_condition_pushdown fails when using blobs(text)