sql/ha_ndbcluster.cc
@@ -6587,7 +6587,10 @@ void ndb_serialize_cond(const Item *item, void *arg)
                      context->expecting_field_result(INT_RESULT))
                   : true)) &&
                 // Bit fields no yet supported in scan filter
-                type != MYSQL_TYPE_BIT)
+                type != MYSQL_TYPE_BIT &&
+                // No BLOB support in scan filter
+                type != MYSQL_TYPE_TINY_BLOB &&
+                type != MYSQL_TYPE_BLOB)
             {
               const NDBCOL *col= tab->getColumn(field->field_name);
               DBUG_ASSERT(col);
